@@ -35,6 +35,8 @@ import java.util.List;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
+import static org.springframework.security.web.util.matcher.AntPathRequestMatcher.antMatcher;
+
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
@@ -53,22 +55,38 @@ public class SecurityConfig {
             .authorizeHttpRequests(auth -> {
                 System.out.println("Setting up authorization rules");
                 auth
+                    // Public endpoints
                     .requestMatchers(
-                        "/api/auth/**",
-                        "/api/insurance/packages",
-                        "/api/insurance/categories",
-                        "/api/debug/**"
+                        antMatcher("/api/auth/login"),
+                        antMatcher("/api/auth/register"),
+                        antMatcher("/api/auth/refresh-token"),
+                        antMatcher("/api/auth/validate"),
+                        antMatcher("/api/auth/test"),
+                        antMatcher("/api/auth/debug-token"),
+                        antMatcher("/api/auth/debug-login"),
+                        antMatcher("/api/auth/create-test-user"),
+                        antMatcher("/api/auth/me"),
+                        antMatcher("/api/debug/**"),
+                        antMatcher("/api/insurance/packages"),
+                        antMatcher("/api/insurance/categories"),
+                        antMatcher("/error")
                     ).permitAll()
-                    .requestMatchers("/api/admin/**").hasAuthority("ROLE_ADMIN")
-                    .requestMatchers("/api/insurance/claims/pending").hasAuthority("ROLE_ADMIN")
-                    .requestMatchers("/api/insurance/claims/{claimId}/process").hasAuthority("ROLE_ADMIN")
+                    
+                    // Admin-only endpoints
+                    .requestMatchers(antMatcher("/api/admin/**")).hasAuthority("ROLE_ADMIN")
+                    .requestMatchers(antMatcher("/api/insurance/claims/pending")).hasAuthority("ROLE_ADMIN")
+                    .requestMatchers(antMatcher("/api/insurance/claims/{claimId}/process")).hasAuthority("ROLE_ADMIN")
+                    
+                    // Protected endpoints
                     .requestMatchers(
-                        "/api/insurance/policies/**",
-                        "/api/insurance/claims/**",
-                        "/api/users/**"
-                    ).hasAnyAuthority("ROLE_USER", "ROLE_ADMIN")
+                        antMatcher("/api/insurance/policies/**"),
+                        antMatcher("/api/insurance/claims/**"),
+                        antMatcher("/api/insurance/policies"),
+                        antMatcher("/api/insurance/claims")
+                    ).authenticated()
+                    
+                    // Default for anything else
                     .anyRequest().authenticated();
-                System.out.println("Authorization rules configured");
             })
             .sessionManagement(session -> session
                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
@@ -80,10 +98,7 @@ public class SecurityConfig {
                     System.out.println("\n=== Authentication Failure ===");
                     System.out.println("Request URL: " + request.getRequestURI());
                     System.out.println("Method: " + request.getMethod());
-                    System.out.println("Headers:");
-                    request.getHeaderNames().asIterator().forEachRemaining(name -> {
-                        System.out.println("  " + name + ": " + request.getHeader(name));
-                    });
+                    System.out.println("Exception type: " + ex.getClass().getName());
                     System.out.println("Error message: " + ex.getMessage());
                     
                     // Set CORS headers
@@ -91,6 +106,7 @@ public class SecurityConfig {
                     response.setHeader("Access-Control-Allow-Credentials", "true");
                     response.setHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS");
                     response.setHeader("Access-Control-Allow-Headers", "Authorization, Content-Type, X-Requested-With, Accept");
+                    response.setHeader("Access-Control-Expose-Headers", "X-Auth-Error");
                     response.setContentType("application/json;charset=UTF-8");
                     
                     response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
@@ -109,6 +125,7 @@ public class SecurityConfig {
                     response.setHeader("Access-Control-Allow-Credentials", "true");
                     response.setHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS");
                     response.setHeader("Access-Control-Allow-Headers", "Authorization, Content-Type, X-Requested-With, Accept");
+                    response.setHeader("Access-Control-Expose-Headers", "X-Auth-Error");
                     response.setContentType("application/json;charset=UTF-8");
                     
                     response.setStatus(HttpServletResponse.SC_FORBIDDEN);
@@ -116,7 +133,6 @@ public class SecurityConfig {
                 })
             );
 
-        System.out.println("Security configuration completed");
         return http.build();
     }
 
@@ -131,21 +147,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList(
-            "Authorization",
-            "Content-Type",
-            "X-Requested-With",
-            "Accept",
-            "Origin",
-            "Access-Control-Request-Method",
-            "Access-Control-Request-Headers"
-        ));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "X-Auth-Error"));
         configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
